--- a/cars/main/static/main/css/main.css
+++ b/cars/main/static/main/css/main.css
@@ -9,7 +9,7 @@ aside {
     padding: 2.5%;
     height: 105vh;
     color: #fff;
-    border-right: 5px solid 4d4d4d;
+    border-right: 5px solid #4d4d4d;
 }
 
 aside img {
@@ -19,10 +19,8 @@ aside img {
 
 aside .logo {
     font-size: 40px;
-    margin-left: 10px;
+    margin-top: 10px;
     font-weight: bold;
-    position: relative;
-    top: -5px;
 }
 
 aside h3 {
